objects/SocialPost.object
<CustomObject>
    <fields>
        <fullName>SN_Case_Owner__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent.Owner:Queue.QueueName)), Parent.Owner:Queue.QueueName,  Parent.Owner:User.FirstName &amp;&apos; &apos; &amp; Parent.Owner:User.LastName)</formula>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SN_Case_Status__c</fullName>
        <formula>TEXT(Parent.Status)</formula>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SN_CheckOwner__c</fullName>
        <formula>IF(Parent.Owner:User.Id = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckOwner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scss__Thread_Root_Post__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is initial SocialPost in the conversation the current social Post has part, null value means the current SocialPost is a root Post itself</description>
        <label>Thread Root Post</label>
        <referenceTo>SocialPost</referenceTo>
        <relationshipLabel>Conversation Posts</relationshipLabel>
        <relationshipName>Conversation_Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>SN_Facebook_Comments</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <columns>SN_Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name</field>
            <operation>startsWith</operation>
            <value>Comment</value>
        </filters>
        <label>Facebook: Comments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SN_Facebook_Inbox_Messages</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <columns>SN_Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name</field>
            <operation>startsWith</operation>
            <value>Inbox Message</value>
        </filters>
        <label>Facebook: Inbox Messages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SN_Facebook_Post_Pubblici</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <columns>SN_Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name</field>
            <operation>startsWith</operation>
            <value>Post from</value>
        </filters>
        <label>Facebook: Post Pubblici</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SN_Social_Post_Miei_Aperti</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <columns>Provider</columns>
        <columns>MessageType</columns>
        <columns>SN_Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SN_Case_Status__c</field>
            <operation>equals</operation>
            <value>Inviato</value>
        </filters>
        <filters>
            <field>SN_CheckOwner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Social Post - Miei - Aperti</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SN_Social_Post_Miei_Chiusi</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <columns>Provider</columns>
        <columns>MessageType</columns>
        <columns>SN_Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SN_Case_Status__c</field>
            <operation>equals</operation>
            <value>Chiuso</value>
        </filters>
        <filters>
            <field>SN_CheckOwner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Social Post - Miei - Chiusi</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SN_Social_Post_Miei_In_Lavorazione</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <columns>Provider</columns>
        <columns>MessageType</columns>
        <columns>SN_Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SN_Case_Status__c</field>
            <operation>equals</operation>
            <value>In Lavorazione</value>
        </filters>
        <filters>
            <field>SN_CheckOwner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Social Post - Miei - In Lavorazione</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SN_Social_Post_Tutti</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <columns>Provider</columns>
        <columns>MessageType</columns>
        <columns>SN_Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>Social Post - Tutti</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SN_Social_Post_Tutti_Aperti</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <columns>Provider</columns>
        <columns>SN_Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SN_Case_Status__c</field>
            <operation>equals</operation>
            <value>Inviato</value>
        </filters>
        <label>Social Post - Tutti - Aperti</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SN_Social_Post_Tutti_Chiusi</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <columns>Provider</columns>
        <columns>MessageType</columns>
        <columns>SN_Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SN_Case_Status__c</field>
            <operation>equals</operation>
            <value>Chiuso</value>
        </filters>
        <label>Social Post - Tutti - Chiusi</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SN_Social_Post_Tutti_In_Lavorazione</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <columns>Provider</columns>
        <columns>MessageType</columns>
        <columns>SN_Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SN_Case_Status__c</field>
            <operation>equals</operation>
            <value>In Lavorazione</value>
        </filters>
        <label>Social Post -  Tutti - In Lavorazione</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SN_Twitter_Direct_Messages</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name</field>
            <operation>startsWith</operation>
            <value>DM</value>
        </filters>
        <label>Twitter: Direct Messages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SN_Twitter_Retweet</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MessageType</field>
            <operation>equals</operation>
            <value>RETWEET</value>
        </filters>
        <label>Twitter: Retweet</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SN_Twitter_Tweet</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>Parent</columns>
        <columns>SN_Case_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MessageType</field>
            <operation>equals</operation>
            <value>TWEET</value>
        </filters>
        <label>Twitter: Tweet</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SN_No_edit_case_if_not_owner</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  
SN_Case_Owner__c &lt;&gt;CASESAFEID(&apos;00558000002cJj4&apos;), 
SN_Case_Owner__c &lt;&gt;CASESAFEID($User.Id), 
NOT(ISCHANGED(SN_Case_Owner__c)))</errorConditionFormula>
        <errorMessage>Non è possibile modificare il Social Post se il relativo Caso non è assegnato alla propria utenza.</errorMessage>
    </validationRules>
</CustomObject>